--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,12 +1,9 @@
-*{
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
+
 
 body {
   font-family: "Open Sans", Arial, Sans-serif;
-  font-size: 16;
+  font-size: 13;
+  background: url('../assets/img/fondo.png');
+  background-repeat: repeat;
 }
+
