--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,9 +1,21 @@
-
+*{
+  margin: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
 
 body {
-  font-family: "Open Sans", Arial, Sans-serif;
-  font-size: 13;
+  font-family: "Courgette", Arial, Sans-serif;
+  font-size: 16;
   background: url('../assets/img/fondo.png');
   background-repeat: repeat;
 }
 
+
+.contenedor {
+  width: 90%;
+  max-width: 1000px;
+  margin: auto;
+  overflow: hidden;
+}
